Agregando BEM a pag productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
-    <link rel="stylesheet" href="../stylesheet/style.css">
+    <link rel="stylesheet" href="../stylesheet/estilosNuevos.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -26,26 +26,117 @@
         </ul>
     </header>
     <main>
-        <div class="main__title2">
+        <div class="products__title">
             <h3>Nuestros Productos</h3>
         </div>
-        <div class="contenedor">
-            <div class="grid-productos">
-                <div class="cake1">
-                    <div class="thumb">
+        <div class="container">
+            <div class="card-container">
+                <div class="card">
+                    <div class="card__img">
                         <img src="../images/fotos/cake1.jpg" alt="">
                     </div>
-                    <div class="card">
+                    <div class="card__body">
                         <div class="card__info">
-                            <p class="nombre">Torta 1</p>
-                            <p class="descripcion">Lorem ipsum dolor sit amet</p>
-                            <p class="precio">$ 10.000</p>
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
+                        </div>
+                        <a href="#" class="card__btn">Comprar</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <img src="../images/fotos/cake2.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__info">
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
+                        </div>
+                        <a href="#" class="card__btn">Comprar</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <img src="../images/fotos/cake3.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__info">
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
+                        </div>
+                        <a href="#" class="card__btn">Comprar</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <img src="../images/fotos/cake4.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__info">
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
+                        </div>
+                        <a href="#" class="card__btn">Comprar</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <img src="../images/fotos/cake5.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__info">
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
+                        </div>
+                        <a href="#" class="card__btn">Comprar</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <img src="../images/fotos/cake6.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__info">
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
+                        </div>
+                        <a href="#" class="card__btn">Comprar</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <img src="../images/fotos/cake7.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__info">
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
+                        </div>
+                        <a href="#" class="card__btn">Comprar</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <img src="../images/fotos/cake8.jpg" alt="">
+                    </div>
+                    <div class="card__body">
+                        <div class="card__info">
+                            <p class="card__title">Torta 1</p>
+                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__price">$ 10.000</p>
                         </div>
                         <a href="#" class="card__btn">Comprar</a>
                     </div>
                 </div>
 
-                <div class="cake2">
+                <!-- <div class="cake2">
                     <div class="thumb">
                         <img src="../images/fotos/cake2.jpg" alt="">
                     </div>
@@ -143,7 +234,7 @@
                     </div>
                 </div>
             </div>
-        </div>  
+        </div>   -->
       
     </main>
     <footer class="footer">
