--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,36 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- CDN Bootstrap stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- CSS stylesheet  -->
+    <link rel="stylesheet" href="../stylesheet/estilosNuevos.css">
+    <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <input type="checkbox" id="check"> 
-         <label for="check" class="checkbtn">
+        <label for="check" class="checkbtn">
             <img src="../images/icons/menu.png" alt="menu" class="burger">
         </label>
         <div class="logo">
              <img src="../images/logos/logo3.png" alt="Berry Bakery" class="logo__img">
         </div>
-        <ul class="nav__list">
-            <li class="nav__item"><a href="../index.html" class="nav__link">INICIO</a></li>
-            <li class="nav__item"><a href="nosotros.html" class="nav__link">NOSOTROS</a></li>
-            <li class="nav__item"><a href="productos.html" class="nav__link">PRODUCTOS</a></li>
-            <li class="nav__item"><a href="ubicacion.html" class="nav__link">UBICACIÓN</a></li>
-            <li class="nav__item"><a href="contacto.html" class="nav__link">CONTACTO</a></li>
+        <ul class="nav__list ">
+            <li class="nav__item"><a href="../index.html" class="nav__link text-decoration-none align-self-center">INICIO</a></li>
+            <li class="nav__item"><a href="nosotros.html" class="nav__link text-decoration-none">NOSOTROS</a></li>
+            <li class="nav__item"><a href="productos.html" class="nav__link text-decoration-none">PRODUCTOS</a></li>
+            <li class="nav__item"><a href="ubicacion.html" class="nav__link text-decoration-none">UBICACIÓN</a></li>
+            <li class="nav__item"><a href="contacto.html" class="nav__link text-decoration-none">CONTACTO</a></li>
         </ul>
     </header>
     <main>
-        <div class="main__contenedor">
-            <div class="main__title">
-                <h3>Nuestra Historia</h3>
-            </div>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos inventore sed nesciunt harum et incidunt placeat, facilis exercitationem non error quisquam minima magnam corporis ad deserunt optio modi vero ipsa! Eius nam excepturi culpa delectus! Exercitationem voluptate vitae nam, illum dolore iusto, dolor sunt quaerat doloremque a facilis natus rerum quos. Tenetur quo id pariatur reiciendis distinctio debitis dignissimos ab, magnam eaque sint, eum asperiores necessitatibus, minima quidem sapiente quas ipsum enim nisi possimus quia omnis veritatis? Quod fugit voluptatem, earum veniam nostrum quasi possimus obcaecati exercitationem iste temporibus odio fuga vero excepturi eveniet! Commodi beatae culpa incidunt, fugit earum iste consequatur nulla? Exercitationem aspernatur, dicta labore esse cum pariatur odit voluptas possimus fugiat delectus deserunt ducimus vero porro enim. </p>
-                <p>Lecessitatibus fugiat, doloremque doloribus! Vero, labore dolor. Soluta ducimus vel distinctio fuga ipsum voluptatibus, natus hic magnam esse atque, nesciunt temporibus nam aspernatur voluptatem aut assumenda, vitae corrupti. Quidem a sed aut, ipsum molestias accusantium itaque quam unde qui? Repudiandae nobis asperiores vitae minima animi ipsum officia nostrum accusamus maiores accusantium commodi dolor voluptatibus ea quibusdam, harum quaerat suscipit optio quidem dolores omnis! Consequuntur quaerat repellat quia quisquam aut libero aliquam nostrum adipisci facilis quasi ratione placeat vel, ex natus expedita ducimus magni odio ut nam aspernatur.</p>
-            </div>
+        
+        <div class="main__contenedor container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../images/fotos/baker3.jpg" class="d-block w-100" alt="baker">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../images/fotos/baker4.jpg" class="d-block w-100" alt="cake">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../images/fotos/baker5.jpg" class="d-block w-100" alt="baker">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </div>  
+        <div class="main__title">
+            <h3>Nuestra Historia</h3>
+        </div>
+        <div class="main__text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos inventore sed nesciunt harum et incidunt placeat, facilis exercitationem non error quisquam minima magnam corporis ad deserunt optio modi vero ipsa! Eius nam excepturi culpa delectus! Exercitationem voluptate vitae nam, illum dolore iusto, dolor sunt quaerat doloremque a facilis natus rerum quos. Tenetur quo id pariatur reiciendis distinctio debitis dignissimos ab, magnam eaque sint, eum asperiores necessitatibus, minima quidem sapiente quas ipsum enim nisi possimus quia omnis veritatis? Quod fugit voluptatem, earum veniam nostrum quasi possimus obcaecati exercitationem iste temporibus odio fuga vero excepturi eveniet! Commodi beatae culpa incidunt, fugit earum iste consequatur nulla? Exercitationem aspernatur, dicta labore esse cum pariatur odit voluptas possimus fugiat delectus deserunt ducimus vero porro enim. </p>
+            <p>Lecessitatibus fugiat, doloremque doloribus! Vero, labore dolor. Soluta ducimus vel distinctio fuga ipsum voluptatibus, natus hic magnam esse atque, nesciunt temporibus nam aspernatur voluptatem aut assumenda, vitae corrupti. Quidem a sed aut, ipsum molestias accusantium itaque quam unde qui? Repudiandae nobis asperiores vitae minima animi ipsum officia nostrum accusamus maiores accusantium commodi dolor voluptatibus ea quibusdam, harum quaerat suscipit optio quidem dolores omnis! Consequuntur quaerat repellat quia quisquam aut libero aliquam nostrum adipisci facilis quasi ratione placeat vel, ex natus expedita ducimus magni odio ut nam aspernatur.</p>
+        </div>
     </main>
     <footer class="footer">
         <div class="footer__container1">
@@ -62,6 +93,8 @@
         <div class="footer__container2">
             <p class="rights">© 2022 Berry Bakery, All Rights Reserved.</p></div.>
     </footer>
+    <!-- Bootstrap scripts  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </body>
 </html>
