--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Berry Bakery</title>
     <!-- CSS stylesheet  -->
     <link rel="stylesheet" href="stylesheet/estilosNuevos.css">    
+    <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <!-- Animación header  -->
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
