--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
+    <!-- CSS stylesheet  -->
     <link rel="stylesheet" href="../stylesheet/estilosNuevos.css">
+    <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
