Agregando BEM pag ubicación

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ubicación</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- CSS stylesheet  -->
+    <link rel="stylesheet" href="../stylesheet/estilosNuevos.css">
+    <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
@@ -26,12 +29,12 @@
         </ul>
     </header>
     <main>
-        <div class="ubicacion__contenedor">
-            <div class="mapa">
+        <div class="ubicacion">
+            <div class="ubicacion__mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.510033106425!2d-71.56132668427514!3d-33.016690882768586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689dde51b772ad3%3A0xa815bc8ac5c6ff37!2zQXYuIFBlcsO6LCBWacOxYSBkZWwgTWFyLCBWYWxwYXJhw61zbw!5e0!3m2!1ses-419!2scl!4v1647647350692!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-            <div class="info">
-                <h3>Nuestra tienda</h3>
+            <div class="ubicacion__info">
+                <h3 class="ubicacion__title">Nuestra tienda</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis laboriosam expedita, earum magni qui aspernatur recusandae ullam labore, deleniti rem eos corrupti. Vero at repudiandae excepturi sit maiores itaque quos! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quos itaque ratione, illo maxime corporis? Quibusdam aut quia distinctio eaque beatae fugit provident, quisquam recusandae aspernatur numquam fuga eos iusto. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aut dolore nisi inventore, repudiandae magnam similique vero, at eaque temporibus dolores quod incidunt laudantium praesentium neque exercitationem? Earum, consequuntur eligendi?</p>
             </div>
         </div>
