Agregando maps a titulos sitio

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,8 @@
         </ul>
     </header>
     <main>
-        <h3 class="contacto__title">Contactanos</h3>
+        <div class="contacto__title">
+            <h3 class="main__title">Contactanos</h3></div>
         <div class="form">
             <form action="/ruta-destino" method="get" enctype="">                
                 <input type="text" name="userName" placeholder="Ingresa tu nombre aquí" class="form__input">
