--- a/pages/productos.html
+++ b/pages/productos.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <div class="products__title">
-            <h3>Nuestros Productos</h3>
+            <h3 class="main__title">Nuestros Productos</h3>
         </div>
         <div class="container">
             <div class="card-container">
