--- a/pages/productos.html
+++ b/pages/productos.html
@@ -33,7 +33,7 @@
         </div>
         <div class="container">
             <div class="card-container">
-                <div class="card">
+                <div class="card1">
                     <div class="card__img">
                         <img src="../images/fotos/cake1.jpg" alt="">
                     </div>
@@ -46,7 +46,7 @@
                         <a href="#" class="card__btn">Comprar</a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card2">
                     <div class="card__img">
                         <img src="../images/fotos/cake2.jpg" alt="">
                     </div>
