--- a/pages/productos.html
+++ b/pages/productos.html
@@ -27,7 +27,7 @@
             <li class="nav__item"><a href="contacto.html" class="nav__link">CONTACTO</a></li>
         </ul>
     </header>
-    <main>
+    <main class="main">
         <div class="products__title">
             <h3 class="main__title">Nuestros Productos</h3>
         </div>
@@ -43,7 +43,7 @@
                             <p class="card__copy">Lorem ipsum dolor sit amet</p>
                             <p class="card__price">$ 10.000</p>
                         </div>
-                        <a href="#" class="card__btn">Comprar</a>
+                        <a href="#" class="card__btn1">Comprar</a>
                     </div>
                 </div>
                 <div class="card2">
@@ -56,7 +56,7 @@
                             <p class="card__copy">Lorem ipsum dolor sit amet</p>
                             <p class="card__price">$ 10.000</p>
                         </div>
-                        <a href="#" class="card__btn">Comprar</a>
+                        <a href="#" class="card__btn2">Comprar</a>
                     </div>
                 </div>
                 <div class="card">
