--- a/pages/productos.html
+++ b/pages/productos.html
@@ -33,7 +33,7 @@
         </div>
         <div class="container">
             <div class="card-container">
-                <div class="card1">
+                <div class="card">
                     <div class="card__img">
                         <img src="../images/fotos/cake1.jpg" alt="">
                     </div>
@@ -43,10 +43,10 @@
                             <p class="card__copy">Lorem ipsum dolor sit amet</p>
                             <p class="card__price">$ 10.000</p>
                         </div>
-                        <a href="#" class="card__btn1">Comprar</a>
+                        <a href="#" class="card__btn">Comprar</a>
                     </div>
                 </div>
-                <div class="card2">
+                <div class="card">
                     <div class="card__img">
                         <img src="../images/fotos/cake2.jpg" alt="">
                     </div>
@@ -56,7 +56,7 @@
                             <p class="card__copy">Lorem ipsum dolor sit amet</p>
                             <p class="card__price">$ 10.000</p>
                         </div>
-                        <a href="#" class="card__btn2">Comprar</a>
+                        <a href="#" class="card__btn">Comprar</a>
                     </div>
                 </div>
                 <div class="card">
