--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -28,7 +28,7 @@
             <li class="nav__item"><a href="contacto.html" class="nav__link">CONTACTO</a></li>
         </ul>
     </header>
-    <main>
+    <main class="main">
         <div class="ubicacion">
             <div class="ubicacion__mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.510033106425!2d-71.56132668427514!3d-33.016690882768586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689dde51b772ad3%3A0xa815bc8ac5c6ff37!2zQXYuIFBlcsO6LCBWacOxYSBkZWwgTWFyLCBWYWxwYXJhw61zbw!5e0!3m2!1ses-419!2scl!4v1647647350692!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
