--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -59,12 +59,14 @@
                 </button>
               </div>
         </div>  
-        <div class="nosotros__title">
-            <h3 class="main__title">Nuestra Historia</h3>
-        </div>
-        <div class="main__text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos inventore sed nesciunt harum et incidunt placeat, facilis exercitationem non error quisquam minima magnam corporis ad deserunt optio modi vero ipsa! Eius nam excepturi culpa delectus! Exercitationem voluptate vitae nam, illum dolore iusto, dolor sunt quaerat doloremque a facilis natus rerum quos. Tenetur quo id pariatur reiciendis distinctio debitis dignissimos ab, magnam eaque sint, eum asperiores necessitatibus, minima quidem sapiente quas ipsum enim nisi possimus quia omnis veritatis? Quod fugit voluptatem, earum veniam nostrum quasi possimus obcaecati exercitationem iste temporibus odio fuga vero excepturi eveniet! Commodi beatae culpa incidunt, fugit earum iste consequatur nulla? Exercitationem aspernatur, dicta labore esse cum pariatur odit voluptas possimus fugiat delectus deserunt ducimus vero porro enim. </p>
-            <p>Lecessitatibus fugiat, doloremque doloribus! Vero, labore dolor. Soluta ducimus vel distinctio fuga ipsum voluptatibus, natus hic magnam esse atque, nesciunt temporibus nam aspernatur voluptatem aut assumenda, vitae corrupti. Quidem a sed aut, ipsum molestias accusantium itaque quam unde qui? Repudiandae nobis asperiores vitae minima animi ipsum officia nostrum accusamus maiores accusantium commodi dolor voluptatibus ea quibusdam, harum quaerat suscipit optio quidem dolores omnis! Consequuntur quaerat repellat quia quisquam aut libero aliquam nostrum adipisci facilis quasi ratione placeat vel, ex natus expedita ducimus magni odio ut nam aspernatur.</p>
+        <div class="container">
+            <div class="nosotros__title">
+                <h3 class="main__title text-center">Nuestra Historia</h3>
+            </div>
+            <div class="main__text mb-5">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos inventore sed nesciunt harum et incidunt placeat, facilis exercitationem non error quisquam minima magnam corporis ad deserunt optio modi vero ipsa! Eius nam excepturi culpa delectus! Exercitationem voluptate vitae nam, illum dolore iusto, dolor sunt quaerat doloremque a facilis natus rerum quos. Tenetur quo id pariatur reiciendis distinctio debitis dignissimos ab, magnam eaque sint, eum asperiores necessitatibus, minima quidem sapiente quas ipsum enim nisi possimus quia omnis veritatis? Quod fugit voluptatem, earum veniam nostrum quasi possimus obcaecati exercitationem iste temporibus odio fuga vero excepturi eveniet! Commodi beatae culpa incidunt, fugit earum iste consequatur nulla? Exercitationem aspernatur, dicta labore esse cum pariatur odit voluptas possimus fugiat delectus deserunt ducimus vero porro enim. </p>
+                <p>Lecessitatibus fugiat, doloremque doloribus! Vero, labore dolor. Soluta ducimus vel distinctio fuga ipsum voluptatibus, natus hic magnam esse atque, nesciunt temporibus nam aspernatur voluptatem aut assumenda, vitae corrupti. Quidem a sed aut, ipsum molestias accusantium itaque quam unde qui? Repudiandae nobis asperiores vitae minima animi ipsum officia nostrum accusamus maiores accusantium commodi dolor voluptatibus ea quibusdam, harum quaerat suscipit optio quidem dolores omnis! Consequuntur quaerat repellat quia quisquam aut libero aliquam nostrum adipisci facilis quasi ratione placeat vel, ex natus expedita ducimus magni odio ut nam aspernatur.</p>
+            </div>
         </div>
     </main>
     <footer class="footer">
