Agregando SEO a sitio web

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berry Bakery</title>
+    <title>Berry Bakery - Los mejores pasteles de Viña del Mar</title>
     <!-- CSS stylesheet  -->
     <link rel="stylesheet" href="stylesheet/estilosNuevos.css">    
     <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <!-- Animación header  -->
-    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Meta keywords  -->
+    <meta name="keywords" content="PASTELERÍA BERRY BAKERY, BAKERY, POSTRES, CELEBRACIONES">
+    <!-- Meta description  -->
+    <meta name="description" content="Pasteleria Berry Bakery ofreciendo desde 2020 exclusivos pasteles y postres. También recibimos pedidos de pasteles personalizados para momentos especiales">
 </head>
 <body>
     <header class="header">
