--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ubicación</title>
+    <title>Berry Bakery - Encuentranos en nuestra tienda en Viña del Mar</title>
     <!-- CSS stylesheet  -->
     <link rel="stylesheet" href="../stylesheet/estilosNuevos.css">
     <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <!-- Meta keywords  -->
+    <meta name="keywords" content="PASTELERIA VIÑA DEL MAR">
 
 </head>
 <body>
