--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>Berry Bakery - Nuestra Historia</title>
     <!-- CDN Bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS stylesheet  -->
     <link rel="stylesheet" href="../stylesheet/estilosNuevos.css">
     <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:ital,wght@0,300;0,500;0,700;1,500&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <!-- Meta keywords  -->
+    <meta name="keywords" content="PASTELERÍA, HISTORIA, HECHO EN CASA, MOMENTOS ESPECIALES, EXPERIENCIA">
 </head>
 <body>
     <header class="header">
