--- a/pages/productos.html
+++ b/pages/productos.html
@@ -41,9 +41,9 @@
                     </div>
                     <div class="card__body">
                         <div class="card__info">
-                            <p class="card__title">Torta 1</p>
-                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
-                            <p class="card__price">$ 10.000</p>
+                            <p class="card__title">Cheesecake de frutillas</p>
+                            <p class="card__copy">Delicioso cheesecake de frutilla preparado con <br> los ingredientes más frescos</p>
+                            <p class="card__price">$ 15.000</p>
                         </div>
                         <a href="#" class="card__btn">Comprar</a>
                     </div>
@@ -54,9 +54,9 @@
                     </div>
                     <div class="card__body">
                         <div class="card__info">
-                            <p class="card__title">Torta 1</p>
-                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
-                            <p class="card__price">$ 10.000</p>
+                            <p class="card__title">Napoleon Berry</p>
+                            <p class="card__copy">Tradicional preparación dulce con el toque Berry Bakery</p>
+                            <p class="card__price">$ 5.000</p>
                         </div>
                         <a href="#" class="card__btn">Comprar</a>
                     </div>
@@ -67,8 +67,8 @@
                     </div>
                     <div class="card__body">
                         <div class="card__info">
-                            <p class="card__title">Torta 1</p>
-                            <p class="card__copy">Lorem ipsum dolor sit amet</p>
+                            <p class="card__title">Brownie plus</p>
+                            <p class="card__copy">Brownie pero con un plus de berry</p>
                             <p class="card__price">$ 10.000</p>
                         </div>
                         <a href="#" class="card__btn">Comprar</a>
